--- a/styles/game.css
+++ b/styles/game.css
@@ -1,7 +1,7 @@
 #active-game {
   text-align: center;
-  margin: 2rem 0 5rem 0; // top right bottom left
-  // display: none;
+  margin: 2rem 0 5rem 0; /* top right bottom left */
+  display: none;
 }
 
 #game-over {
@@ -10,9 +10,9 @@
   margin: auto;
   padding: 1rem 2rem;
   background-color: rgb(50, 5, 87);
+  color: white;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  color: white;
   display: none;
 }
 
